# raccoon

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  README.md  README.rst  coverage.sh  pyproject.toml  raccoon.py  setup.cfg  setup.py  test_raccoon.py
.github/plans/: 2026-04-21-dropin-removal-plan.md  2026-04-22 type-hint-implementation-plan.md  2026-04-23-dataframe-indexing-overloads-plan.md
.github/workflows/: python-test.yml  release.yml  test_runner.yml
docs/: Makefile  change_log.rst  conf.py  convert_pandas.rst  index.rst  make.bat  make_docs.bat  make_docs.sh  make_examples.bat  modules.rst  raccoon.dataframe.rst  raccoon.rst  raccoon.series.rst  raccoon.sort_utils.rst  raccoon.utils.rst  requirements.txt  speed_test.rst  usage.rst  usage_dataframe.rst  usage_dropin.rst  usage_series.rst
examples/: convert_pandas.ipynb  speed_test.ipynb  usage.ipynb  usage_dataframe.ipynb  usage_dropin.ipynb  usage_series.ipynb
raccoon/: __init__.py  dataframe.py  raccoon.py  series.py  sort_utils.py  utils.py
raccoon/tests/: test_dataframe.py  test_utils.py
tests/: test_dataframe.py  test_delete.py  test_get.py  test_getters.py  test_initialize.py  test_iterators.py  test_set.py  test_sort.py  test_sorted.py  test_utils.py  test_validate.py
tests/test_dataframe/: test_dataframe.py  test_delete.py  test_get.py  test_getters.py  test_initialize.py  test_iterators.py  test_set.py  test_sort.py  test_sorted.py  test_utils.py  test_validate.py
tests/test_dropin/: test_dataframe_blist.py  test_series_blist.py
tests/test_series/: test_delete.py  test_get.py  test_getters.py  test_initialize.py  test_series.py  test_set.py  test_sort.py  test_utils.py  test_validate.py  test_view_series.py
