[project]
name = "raccoon"
version = "3.3.0"
authors = [
    { name = "Ryan Sheftel", email = "rsheftel@alumni.upenn.edu" },
]
description = 'Python DataFrame with fast insert and appends'
readme = "README.rst"
requires-python = ">=3.11"
keywords = ['dataframe', 'data', 'structure']
license = { text = "MIT" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = ['tabulate']

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["raccoon"]

[project.urls]
"Homepage" = 'https://github.com/rsheftel/raccoon'
"Source" = 'https://github.com/rsheftel/raccoon'
"Documentation" = 'https://raccoon.readthedocs.io/en/latest/'

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ['I']

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = ["tests/data", "profiling"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "twine>=6.2.0",
]
